--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   width: 390px;
   min-height: 100vh;
   /* background-color: #f9f9fb; */
-  background-color: white;
+  background-color: #f7f7f7;
 }
