--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @tailwind base;
 @tailwind components;
+
+@layer utilities {
+  .text-2xs {
+    font-size: 0.5rem; /* 8px */
+    line-height: 0.75rem; /* 12px */
+  }
+}
+
 @tailwind utilities;
 
 :root {
